possible fix for smooth scroll on mobile

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -4,6 +4,7 @@
     position: sticky;
     position: -webkit-sticky;
     top: 0;
+    left: 0;
     margin: 0;
     z-index: 100;
     width: 100%;
